--- a/Documents/NetBeansProjects/IsBrSystem/src/Telas/TelaPacientesMedico.form
+++ b/Documents/NetBeansProjects/IsBrSystem/src/Telas/TelaPacientesMedico.form
@@ -1121,17 +1121,13 @@
                 <Component class="javax.swing.JTable" name="tabela">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="10" rowCount="0">
+                      <Table columnCount="6" rowCount="0">
                         <Column editable="false" title="Data" type="java.lang.Object"/>
-                        <Column editable="false" title="Hist&#xf3;rico" type="java.lang.Object"/>
-                        <Column editable="false" title="Conduta" type="java.lang.Object"/>
-                        <Column editable="false" title="Medica&#xe7;&#xe3;o" type="java.lang.Object"/>
-                        <Column editable="false" title="Frequ&#xea;ncia Card&#xed;aca" type="java.lang.Object"/>
-                        <Column editable="false" title="Frequ&#xea;ncia Respirat&#xf3;ria" type="java.lang.Object"/>
-                        <Column editable="false" title="HGT" type="java.lang.Object"/>
-                        <Column editable="false" title="Press&#xe3;o Arterial" type="java.lang.Object"/>
-                        <Column editable="false" title="Temperatura" type="java.lang.Object"/>
-                        <Column editable="false" title="Satura&#xe7;&#xe3;o" type="java.lang.Object"/>
+                        <Column editable="true" title="Titulo" type="java.lang.Object"/>
+                        <Column editable="false" title="Nome do M&#xe9;dico" type="java.lang.Object"/>
+                        <Column editable="true" title="Exame" type="java.lang.Object"/>
+                        <Column editable="true" title="Observa&#xe7;&#xe3;o" type="java.lang.Object"/>
+                        <Column editable="true" title="Conclus&#xe3;o" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -1166,26 +1162,6 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="60" minWidth="60" prefWidth="60" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="100" minWidth="100" prefWidth="100" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
                       </TableColumnModel>
                     </Property>
                     <Property name="rowHeight" type="int" value="28"/>
@@ -1194,6 +1170,7 @@
                     </Property>
                   </Properties>
                   <Events>
+                    <EventHandler event="ancestorAdded" listener="javax.swing.event.AncestorListener" parameters="javax.swing.event.AncestorEvent" handler="tabelaAncestorAdded"/>
                     <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tabelaMouseClicked"/>
                   </Events>
                 </Component>
