Ajustes nas telas e nas querys de busca pacientes para classificação. Necessário realizar ajustes tbm na trigger da tabel tblaudo.

--- a/Documents/NetBeansProjects/IsBrSystem/src/Telas/TelaPrincipalMedico.form
+++ b/Documents/NetBeansProjects/IsBrSystem/src/Telas/TelaPrincipalMedico.form
@@ -116,7 +116,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Sys Consult&#xf3;rio V - 01"/>
+    <Property name="title" type="java.lang.String" value="isBR - SISTEMA HOSPITALAR | Consult&#xf3;rio"/>
     <Property name="extendedState" type="int" value="6"/>
   </Properties>
   <SyntheticProperties>
