--- a/Documents/NetBeansProjects/IsBrSystem/src/Telas/LoginnRecepcao.form
+++ b/Documents/NetBeansProjects/IsBrSystem/src/Telas/LoginnRecepcao.form
@@ -3,7 +3,7 @@
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Login Recep&#xe7;&#xe3;o"/>
+    <Property name="title" type="java.lang.String" value="isBR - SISTEMA HOSPITALAR | Login Recep&#xe7;&#xe3;o"/>
     <Property name="extendedState" type="int" value="6"/>
   </Properties>
   <SyntheticProperties>
