--- a/Documents/NetBeansProjects/IsBrSystem/src/Telas/TelaPrincipalRecepcao.form
+++ b/Documents/NetBeansProjects/IsBrSystem/src/Telas/TelaPrincipalRecepcao.form
@@ -142,7 +142,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Sys Consult&#xf3;rio V - 01"/>
+    <Property name="title" type="java.lang.String" value="isBR - SISTEMA HOSPITALAR | Sys Consult&#xf3;rio"/>
     <Property name="extendedState" type="int" value="6"/>
   </Properties>
   <SyntheticProperties>
