--- a/Documents/NetBeansProjects/IsBrSystem/src/Telas/TelaVisualizarHistoricoClinico.form
+++ b/Documents/NetBeansProjects/IsBrSystem/src/Telas/TelaVisualizarHistoricoClinico.form
@@ -3,7 +3,7 @@
 <Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="title" type="java.lang.String" value="Visualizar Hist&#xf3;rico Cl&#xed;nico"/>
+    <Property name="title" type="java.lang.String" value="isBR - SISTEMA HOSPITALAR | Visualizar Hist&#xf3;rico Cl&#xed;nico"/>
     <Property name="extendedState" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
       <Connection code="MAXIMIZED_BOTH" type="code"/>
     </Property>
